--- a/admin/templates/admin.twig
+++ b/admin/templates/admin.twig
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "base.twig" %}
 
 {% block content %}
-{% include "common/nav.html" %}
+{% include "common/nav.twig" %}
         <div class="span9">
           <div class="hero-unit">
             {% if appletouchicon %}
