--- a/admin/templates/common/settings.twig
+++ b/admin/templates/common/settings.twig
@@ -21,7 +21,6 @@
                 </div>
               </div>
 
-
               <div class="control-group">
                 <label class="control-label" for="pagination">Pagination</label>
                 <div class="controls">
@@ -67,6 +66,13 @@
                 <label class="control-label" for="linkedin">Linkedin URL</label>               
                 <div class="controls">
                   <input type="text" id="linkedin" class="input-xlarge" name="settings[linkedin]" value="{{ settings.linkedin.value }}">
+                </div>
+              </div>
+
+              <div class="control-group">
+                <label class="control-label" for="pinterest">Pinterest URL</label>               
+                <div class="controls">
+                  <input type="text" id="pinterest" class="input-xlarge" name="settings[pinterest]" value="{{ settings.pinterest.value }}">
                 </div>
               </div>
 
