--- a/admin/templates/common/footer.twig
+++ b/admin/templates/common/footer.twig
@@ -35,7 +35,7 @@
     </div><!--/.fluid-container-->
 
     <!-- JavaScript at the bottom for fast page loading -->
-    <script src="/admin/js/bootstrap.min.js"></script>
+    <script src="/admin/js/bootstrap.js"></script>
 
   </body>
 </html>
