--- a/admin/templates/common/module-add.twig
+++ b/admin/templates/common/module-add.twig
@@ -5,6 +5,9 @@
           span[rel="tooltip"] {
             border-bottom: 1px dotted #CCC;
           }
+          .fk.well {
+            padding-left: 0px !important;
+          }
         </style>
         <script type="text/javascript">
         $(document).ready(function() {
@@ -31,7 +34,7 @@
             }
           });
 
-          $('form').submit(function(event) {
+          $('form.add').submit(function(event) {
             tinyMCE.triggerSave();
             var status = [];
             $('form .textarea').each(function() {
@@ -152,8 +155,10 @@
                             // Toggle the main model fields
                             {% for toggles in options %}
                               if ('{{ toggle }}' === '{{ toggles }}') {
+                                console.log('{{ toggles }}');
                                 $(this).parents('.main').find('div.[data-type="{{ toggles }}"]').eq(0).show(300);
                               } else {
+                                console.log('{{ toggles }}');
                                 $(this).parents('.main').find('div.[data-type="{{ toggles }}"]').eq(0).hide();
                               }
                             {% endfor %}
@@ -171,7 +176,7 @@
         </script>
         <div class="span9">
 
-          <form class="form-horizontal" method="post" enctype="multipart/form-data">
+          <form class="form-horizontal add" method="post" enctype="multipart/form-data">
 
             <div class="page-header">
               <a class="btn btn-small pull-right" href="/admin/{{ module }}">Cancel</a>
@@ -207,7 +212,8 @@
               <div class="control-group{% if field.onload == 'hide' %} hide{% endif %}" data-type="{{ key }}">
                 <label class="control-label" for="{{ key }}">{% if field.required %}<span rel="tooltip">{% endif %}{{ field.label|lower|capitalize }}{% if field.required %}</span>{% endif %}</label>
                 <div class="controls">
-                  <textarea class="input-xlarge {% if field.rich_editor %} textarea{% endif %}{% if field.required %} required{% endif %}" id="{{ key }}" name="{{ module }}[{{ key }}]"{% if field.readonly %} readonly{% endif %}></textarea>
+                  <input type="hidden" name="{{ module }}[type]" value="{{ module }}">
+                  <textarea class="input-xlarge span8{% if field.rich_editor %} textarea{% endif %}{% if field.required %} required{% endif %}" rows="8" id="{{ key }}" name="{{ module }}[{{ key }}]"{% if field.readonly %} readonly{% endif %}></textarea>
                   {% if field.help %}
                   <p class="help-block">{{ field.help|raw }}</p>
                   {% endif %}
@@ -312,7 +318,7 @@
               </div>
               <div id="own{{ loop.index }}" class="own" data-id="{{ loop.index }}">
                 <div class="actions pull-right">
-                  <a class="btn btn-mini btn-primary clone"><i class="icon-plus-sign icon-white"></i> Add</a> 
+                  <a class="btn btn-mini btn-primary clone"><i class="icon-plus-sign icon-white"></i> Add</a>
                   <a class="btn btn-mini btn-primary remove"><i class="icon-remove-sign icon-white"></i> Remove</a>
                 </div>
               {% for fkkey, fkfield in field.fields %}
@@ -322,7 +328,7 @@
                     <div class="controls">
                       <input type="hidden" name="{{ module }}[{{ key }}][0][type]" value="{{ key|slice(3, 100)|lower }}">
                       {% if session.region %}<input type="hidden" name="{{ module }}[{{ key }}][0][region]" value="{{ session.region }}">{% endif %}
-                      <input type="text" class="input-xlarge{% if fkfield.validate %} {{ fkfield.validate }}{% endif %}"{% if fkfield.maxlength %} maxlength="{{ fkfield.maxlength }}"{% endif %} id="{{ module }}[{{ key }}][0][{{ fkkey }}]" name="{{ module }}[{{ key }}][0][{{ fkkey }}]"{% if field.readonly %} readonly{% endif %}>
+                      <input type="text" class="input-xlarge{% if fkfield.validate %} {{ fkfield.validate }}{% endif %}"{% if fkfield.maxlength %} maxlength="{{ fkfield.maxlength }}"{% endif %} id="{{ module }}[{{ key }}][0][{{ fkkey }}]" name="{{ module }}[{{ key }}][0][{{ fkkey }}]"{% if fkfield.readonly %} readonly{% endif %}>
                       {% if fkfield.help %}
                       <span class="help-inline">{{ fkfield.help|raw }}</span>
                       {% endif %}
@@ -399,11 +405,11 @@
                 </div>
                 {% elseif fkfield.type == 'foreignkey' %}
                 <!--  -->
-                <div class="well control-group{% if fkfield.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
+                <div class="fk well control-group{% if fkfield.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
                   <label class="control-label" for="{{ key }}">{% if fkfield.required %}<span rel="tooltip">{% endif %}{{ fkfield.label|capitalize }}{% if fkfield.required %}</span>{% endif %}</label>
                   <input type="hidden" name="{{ module }}[{{ key }}][0][{{ fkkey }}][0][type]" value="{{ fkkey|slice(6, 100)|lower }}">
                   <div class="controls" >
-                    <select{% if not fkfield.one %} multiple="multiple"{% endif %} name="{{ module }}[{{ key }}][0][{{ fkkey }}][0][id]" id="{{ key }}"{% if fkfield.required %} class="required"{% endif %}>
+                    <select{% if not fkfield.one %} multiple="multiple"{% endif %} name="{{ module }}[{{ key }}][0][{{ fkkey }}][0][id]" id="{{ key }}" class="input-xlarge{% if fkfield.required %} required{% endif %}">
                     {% if fkfield.one %}
                     <option value="">-- Select --</option>
                     {% endif %}
@@ -422,18 +428,18 @@
               <hr>
               </div>
               {% elseif field.relation == 'shared' %}
-              <div class="page-header">
+              <div class="page-header" data-type="{{ key }}">
                 <h1>
-                  <small>{{ key|slice(6, 100)|capitalize }}</small>
+                  <small>{{ field.label|capitalize }}</small>
                 </h1>
               </div>
-              <div class="actions pull-right">
+              <div class="actions pull-right" data-type="{{ key }}">
                   <a href="/admin/{{ key|slice(6, 100)|lower }}" class="btn btn-mini btn-primary" target="_blank"><i class="icon-plus-sign icon-white"></i> Add</a> 
               </div>
-              <div class="control-group{% if field.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
+              <div class="control-group{% if field.onload == 'hide' %} hide{% endif %}" data-type="{{ key }}">
                 <label class="control-label" for="{{ key }}">{% if field.required %}<span rel="tooltip">{% endif %}{{ field.label|capitalize }}{% if field.required %}</span>{% endif %}</label>
                 <div class="controls">
-                  <select{% if not field.one %} multiple="multiple"{% endif %} name="{{ key }}[]" id="{{ key }}"{% if field.required %} class="required"{% endif %}>
+                  <select{% if not field.one %} multiple="multiple"{% endif %} name="{{ key }}[]" id="{{ key }}" class="input-xlarge{% if field.required %} required{% endif %}">
                   {% if field.one %}
                     <option value="">-- Select --</option>
                   {% endif %}
