--- a/templates/common/head.twig
+++ b/templates/common/head.twig
@@ -10,7 +10,7 @@
   <meta name="description" content="">
 
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
-  <script src="js/libs/modernizr-2.5.3.min.js"></script>
+  <script src="/js/libs/modernizr-2.5.3.min.js"></script>
 </head>
