--- a/admin/templates/common/nav.twig
+++ b/admin/templates/common/nav.twig
@@ -16,7 +16,7 @@
             <ul class="nav pull-right">
               <li><a href="/" target="_blank">Preview <i class="icon-globe icon-white"></i></a></li>
               <li class="dropdown" id="menu1">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="#menu1">Tools <b class="caret"></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="#menu1">Tools <i class="icon-wrench icon-white"></i> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li class="clear-cache"><a href="#"><span class="badge pull-right">{{ cache.status }}</span><i class="icon-trash"></i> Clear cache</a></li>
                   <!--<li><a href="/admin/cache-manager">Cache manager</a></li>-->
@@ -26,7 +26,7 @@
               </li>
 
               <li class="dropdown" id="menu2">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="#menu2">Logout <b class="caret"></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="#menu2">Logout <i class="icon-user icon-white"></i> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="/admin/logout/"><i class="icon-off"></i> Logout {{ session.user }}?</a></li>
                 </ul>
