Updating admin view files and auto-generator. Added search filter highlighting in backups module.

--- a/admin/templates/404.twig
+++ b/admin/templates/404.twig
@@ -10,7 +10,7 @@
             </div>
             <p class="lead">The page you were looking for does not exist... <a class="btn btn-inverse pull-right" href="/admin"><i class="icon-arrow-left icon-white"></i> Back to dashboard</a></p>
             <div class="alert alert-info alert-block">
-              <strong>Heads up!</strong> Have you defined this URL route in the <code>$valid_paths</code> array located in the <em>admin/index.php</em> file yet?
+              <strong>Heads up!</strong> Have you defined this URL route in the <code>$valid_paths</code> array located in the <em>admin/core/urls.php</em> file yet?
             </div>
             <p></p>
         </div>
