--- a/admin/templates/common/nav.twig
+++ b/admin/templates/common/nav.twig
@@ -21,7 +21,7 @@
                   <li class="clear-cache"><a href="#"><span class="badge pull-right">{{ cache.status }}</span><i class="icon-trash"></i> Clear cache</a></li>
                   <!--<li><a href="/admin/cache-manager">Cache manager</a></li>-->
                   <li class="divider"></li>
-                  <li><a href="/admin/system-info"><i class="icon-tasks"></i> System information</a></li>
+                  <li><a href="/admin/systeminfo"><i class="icon-tasks"></i> System information</a></li>
                 </ul>
               </li>
 
